--- a/Mask_R_CNN.ipynb
+++ b/Mask_R_CNN.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[33mWARNING: Package(s) not found: mask-rcnn\u001b[0m\u001b[33m\n",
             "\u001b[0m"
@@ -40,14 +26,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# example of inference with a pre-trained coco model\n",
-        "from keras.preprocessing.image import load_img\n",
-        "from keras.preprocessing.image import img_to_array\n",
-        "from mrcnn.visualize import display_instances\n",
-        "from mrcnn.config import Config\n",
-        "from mrcnn.model import MaskRCNN"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -56,12 +35,11 @@
         "id": "DOmbXqTlNLJF",
         "outputId": "b8c8922b-b33b-4e10-c8be-152946c11efd"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "ModuleNotFoundError",
           "evalue": "No module named 'mrcnn'",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
@@ -69,21 +47,25 @@
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mrcnn'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          ]
         }
+      ],
+      "source": [
+        "# example of inference with a pre-trained coco model\n",
+        "from keras.preprocessing.image import load_img\n",
+        "from keras.preprocessing.image import img_to_array\n",
+        "from mrcnn.visualize import display_instances\n",
+        "from mrcnn.config import Config\n",
+        "from mrcnn.model import MaskRCNN"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aho11tA7PIN6"
+      },
+      "outputs": [],
       "source": [
         "class_names = ['BG', 'person', 'bicycle', 'car', 'motorcycle', 'airplane',\n",
         "               'bus', 'train', 'truck', 'boat', 'traffic light',\n",
@@ -99,16 +81,16 @@
         "               'dining table', 'toilet', 'tv', 'laptop', 'mouse', 'remote',\n",
         "               'keyboard', 'cell phone', 'microwave', 'oven', 'toaster',\n",
         "               'sink', 'refrigerator', 'book', 'clock', 'vase', 'scissors',\n",
-        "               'teddy bear', 'hair drier', 'toothbrush']"
-      ],
-      "metadata": {
-        "id": "aho11tA7PIN6"
-      },
-      "execution_count": null,
-      "outputs": []
+        "               'teddy bear', 'hair drier', 'toothbrush'] #test"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DnfS6ijqPYuY"
+      },
+      "outputs": [],
       "source": [
         "# define the test configuration\n",
         "class TestConfig(Config):\n",
@@ -130,12 +112,21 @@
         "r = results[0]\n",
         "# show photo with bounding boxes, masks, class labels and scores\n",
         "display_instances(img, r['rois'], r['masks'], r['class_ids'], class_names, r['scores'])"
-      ],
-      "metadata": {
-        "id": "DnfS6ijqPYuY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
